# myFacegram

./: .dockerignore  .gitignore  Dockerfile  README.md  manage.py  pyproject.toml  requirements.txt
.github/workflows/: poetry-django.yml  static.yml
assets/css/: drag_and_drop.css  forms.css  main.css  sesion.css
assets/js/: drag_and_drop.js  load_photo.js
environment/: .env.production
myFacegram/: asgi.py  settings.py  settings_production.py  urls.py  wsgi.py
platzigram/: middleware.py  settings.py  urls.py
posts/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
posts/migrations/: 0001_initial.py  0002_auto_20200826_2039.py  0003_post_content_text.py  0004_auto_20200911_0432.py  0005_auto_20200911_0533.py  0006_auto_20200911_1947.py
static/css/: drag_and_drop.css  footer.css  forms.css  header.css  main.css  posts.css  test_prod.css
static/design/: Logo_01.xcf
static/js/: label_name.js  load_photo.js  update_profile.js
templates/: base.html  footer.html  header.html
templates/posts/: feed.html  new.html  post-content.html  post-detail.html  post-header.html  post.html
templates/users/: auth.html  base.html  login.html  profile.html  signup.html  update_profile.html
tests/: test-storage.py  testfile.txt
users/: admin.py  apps.py  forms.py  models.py  my_functions.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_profile_age.py  0003_auto_20200828_0144.py  0004_auto_20200828_0339.py  0005_auto_20200911_0057.py  0006_auto_20200912_0135.py  0007_auto_20200912_0141.py  0008_auto_20200930_1610.py  0009_auto_20200930_1613.py  (+5 more)
(+16 files in other folders)
