[tool.poetry]
name = "myfacegram"
version = "0.1.0"
description = "simulation of a social-network"
authors = ["Adora Gonzalez <im.stariluz@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false 

[tool.poetry.dependencies]
python = "^3.12"
asgiref = "^3.8.1"
Django = "^5.0.6"
pillow = "^10.3.0"
pytz = "^2024.1"
sqlparse = "^0.5.0"
daphne = "^4.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
